Aggiunta chiamata Get per homepage; messo appsettings in gitignore

--- a/BUILD-WEEK-4_TEAM-7/Views/Home/Index.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Home/Index.cshtml
@@ -1,4 +1,13 @@
-﻿@{
+﻿@model ProductsViewModel
+
+@{
     ViewData["Title"] = "Home Page";
+    foreach (var product in @Model.Products) {
+		Console.WriteLine(product.ProductName);
+		Console.WriteLine(product.IdProduct);
+    }
 }
+
+
+
 
