--- a/BUILD-WEEK-4_TEAM-7/Views/Shared/_Layout.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"] - BUILD_WEEK_4_TEAM_7</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/BUILD_WEEK_4_TEAM_7.styles.css" asp-append-version="true" />
+   @*  <link rel="stylesheet" href="~/BUILD_WEEK_4_TEAM_7.styles.css" asp-append-version="true" /> *@
 </head>
 <body>
     <header>
