--- a/BUILD-WEEK-4_TEAM-7/Views/Shared/_Layout.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
                         <li><a href="javascript:void(0)" class="text-white mb-1">Chi Siamo</a></li>
                         <li><a href="javascript:void(0)" class="text-white mb-1">Contattaci</a></li>
                         <li><a href="javascript:void(0)" class="text-white mb-1">Lavora con Noi</a></li>
-                        <li><a href="javascript:void(0)" class="text-white">FAQ</a></li>
+                        <li><a href="javascript:void(0)" class="text-white mb-1">FAQ</a></li>
                     </ul>
                 </div>
                 <!-- Sezione Social -->
