--- a/BUILD-WEEK-4_TEAM-7/Views/Home/Index.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Home/Index.cshtml
@@ -6,138 +6,74 @@
         Console.WriteLine(product.ProductName);
         Console.WriteLine(product.IdProduct);
     }
-    Console.WriteLine(ViewBag.Categories);
 }
 
-@* <div class="container-fluid mt-4" id="Pc">
-    @foreach (var category in ViewBag.Categories)
-    {
-        <h4 class="text-white">@category.CategoryName</h4>
-        <div class="container-fluid py-4" id="carosello">
-            <div id="carousel3" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <!-- Prima serie di elementi del carosello -->
-                    <div class="carousel-item active">
-                        <div class="container-fluid">
-                            <div class="row">
-                                <div class="col-12 col-md-3">
-                                    <div class="card">
-                                        <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcTn8CdnXjlY3r0mu6Z5ifpLvFmXLp1aXUjy2EPE5seTTyZ4Hq_eKMJVF-OlejbHBBOMcK9wRWegWCoZRtPFihtIu7AsFXSllvX-u9fvaHM41f7VdF3Kn2cwd4Q_1tCtcABe11Dkc81nWw&usqp=CAc" class="card-img-top" alt="Prodotto 1">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Nome Prodotto 1</h5>
-                                            <p class="card-text">Descrizione Prodotto 1</p>
-                                            <a href="DETTAGLI_URL_1" class="btn btn-primary">Dettagli</a>
-                                            <a href="AGGIUNGI_CARRELLO_URL_1" class="btn btn-secondary">Aggiungi al Carrello</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-12 col-md-3">
-                                    <div class="card">
-                                        <img src="URL_IMMAGINE_PRODOTTO_2" class="card-img-top" alt="Prodotto 2">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Nome Prodotto 2</h5>
-                                            <p class="card-text">Descrizione Prodotto 2</p>
-                                            <a href="DETTAGLI_URL_2" class="btn btn-primary">Dettagli</a>
-                                            <a href="AGGIUNGI_CARRELLO_URL_2" class="btn btn-secondary">Aggiungi al Carrello</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-12 col-md-3">
-                                    <div class="card">
-                                        <img src="URL_IMMAGINE_PRODOTTO_3" class="card-img-top" alt="Prodotto 3">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Nome Prodotto 3</h5>
-                                            <p class="card-text">Descrizione Prodotto 3</p>
-                                            <a href="DETTAGLI_URL_3" class="btn btn-primary">Dettagli</a>
-                                            <a href="AGGIUNGI_CARRELLO_URL_3" class="btn btn-secondary">Aggiungi al Carrello</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-12 col-md-3">
-                                    <div class="card">
-                                        <img src="URL_IMMAGINE_PRODOTTO_3" class="card-img-top" alt="Prodotto 3">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Nome Prodotto 3</h5>
-                                            <p class="card-text">Descrizione Prodotto 3</p>
-                                            <a href="DETTAGLI_URL_3" class="btn btn-primary">Dettagli</a>
-                                            <a href="AGGIUNGI_CARRELLO_URL_3" class="btn btn-secondary">Aggiungi al Carrello</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="container-fluid">
-                            <div class="row">
-                                <div class="col-12 col-md-3">
-                                    <div class="card">
-                                        <img src="URL_IMMAGINE_PRODOTTO_4" class="card-img-top" alt="Prodotto 4">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Nome Prodotto 4</h5>
-                                            <p class="card-text">Descrizione Prodotto 4</p>
-                                            <a href="DETTAGLI_URL_4" class="btn btn-primary">Dettagli</a>
-                                            <a href="AGGIUNGI_CARRELLO_URL_4" class="btn btn-secondary">Aggiungi al Carrello</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-12 col-md-3">
-                                    <div class="card">
-                                        <img src="URL_IMMAGINE_PRODOTTO_5" class="card-img-top" alt="Prodotto 5">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Nome Prodotto 5</h5>
-                                            <p class="card-text">Descrizione Prodotto 5</p>
-                                            <a href="DETTAGLI_URL_5" class="btn btn-primary">Dettagli</a>
-                                            <a href="AGGIUNGI_CARRELLO_URL_5" class="btn btn-secondary">Aggiungi al Carrello</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-12 col-md-3">
-                                    <div class="card">
-                                        <img src="URL_IMMAGINE_PRODOTTO_6" class="card-img-top" alt="Prodotto 6">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Nome Prodotto 6</h5>
-                                            <p class="card-text">Descrizione Prodotto 6</p>
-                                            <a href="DETTAGLI_URL_6" class="btn btn-primary">Dettagli</a>
-                                            <a href="AGGIUNGI_CARRELLO_URL_6" class="btn btn-secondary">Aggiungi al Carrello</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-12 col-md-3">
-                                    <div class="card">
-                                        <img src="URL_IMMAGINE_PRODOTTO_3" class="card-img-top" alt="Prodotto 3">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Nome Prodotto 3</h5>
-                                            <p class="card-text">Descrizione Prodotto 3</p>
-                                            <a href="DETTAGLI_URL_3" class="btn btn-primary">Dettagli</a>
-                                            <a href="AGGIUNGI_CARRELLO_URL_3" class="btn btn-secondary">Aggiungi al Carrello</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+<div class="container-fluid mt-4" id="Pc">
 
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carousel3" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carousel3" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
+    @{
+        var index = 0;
+        foreach (var category in ViewBag.Categories)
+        {
+			index++;
+            var carouselId = $"carousel{index}";
+            <h4 class="text-white">@category.CategoryName</h4>
+            <div class="container-fluid py-4" id="carosello">
+                <div id=@carouselId class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        @{
+                            var productsInCategory = Model.Products.Where(p => p.CategoryName == category.CategoryName).ToList();
+                            var productGroups = productsInCategory.Select((product, index) => new { product, index })
+                            .GroupBy(x => x.index / 4)
+                            .Select(g => g.Select(x => x.product).ToList())
+                            .ToList();
+                        }
+
+                        @for (int i = 0; i < productGroups.Count; i++)
+                        {
+                            <div class="carousel-item @(i == 0 ? "active" : "")">
+                                <div class="container-fluid">
+                                    <div class="row">
+                                        @foreach (var product in productGroups[i])
+                                        {
+                                            <div class="col-12 col-md-6 col-lg-3">
+                                                <div class="card" style="height: 24rem;">
+                                                    <img src="@product.ImageURL" class="card-img-top" alt="@product.ProductName">
+                                                    <div class="card-body">
+                                                        <h5 class="card-title text-center">@product.ProductName</h5>
+                                                        <h5 class="card-title text-primary fw-bolder text-center">@product.Price.ToString("C")</h5>
+                                                        <p class="card-text text-center">@product.Description</p>
+                                                        <div class="d-flex flex-column">
+                                                        <a href="DETTAGLI_URL_1" class="btn btn-primary mb-2" style="width: fit-content; align-self: center">Dettagli</a>
+                                                            <a href="AGGIUNGI_CARRELLO_URL_1" class="btn btn-success" style="width: fit-content; align-self: center">Carrello</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        }
+                                    </div>
+                                </div>
+                            </div>
+                        }
+
+
+                        <button class="carousel-control-prev" type="button" data-bs-target="#@carouselId" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+
+                            
+                        <button class="carousel-control-next" type="button" data-bs-target="#@carouselId" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                            
+                       
+
+                    </div>
                 </div>
             </div>
-        </div>
+        }
     }
-</div>
+
     
-    <button class="carousel-control-prev" type="button" data-bs-target="#carousel3" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carousel3" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
- *@            
+</div>
