--- a/BUILD-WEEK-4_TEAM-7/Views/Admin/Admin.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Admin/Admin.cshtml
@@ -1,31 +1,31 @@
 ﻿@model ProductsViewModel
-
 @{
 	ViewData["Title"] = "Admin";
 }
 
 <h3>ADMINISTRATOR PAGE</h3>
 
-<a class="btn btn-primary container-fluid">ADD</a>
+<a class="btn btn-primary container-fluid mb-3" asp-controller="Admin" asp-action="AddProduct">ADD</a>
 
-<div>
+<div class="row">
 	@foreach (var product in Model.Products)
 	{
-		<div class="row">
-			<div class="col-3">
+
+			<div class="col-md-3 mb-3">
 				<div class="card">
 					<img src="@product.ImageURL" class="card-img-top">
 					<div class="card-body">
 						<h5 class="card-title">@product.ProductName</h5>
-						<p class="card-text">@product.Price.ToString()</p
+						<p class="card-text">@product.Price.ToString("C")</p>
 							<p class="card-text">@product.Description</p>
+					<p class="card-text">@product.Stock</p>
+					<p class="card-text">@product.Category</p>
 						<a href="#" class="btn btn-warning">EDIT</a>
 						<a href="#" class="btn btn-danger">DELETE</a>
 					</div>
 
 				</div>
 			</div>
-		</div>
 		
 	}
 </div>
