--- a/BUILD-WEEK-4_TEAM-7/Views/Admin/AddProduct.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Admin/AddProduct.cshtml
@@ -1,4 +1,4 @@
-﻿@model CategoryViewModel
+﻿@model AddProductModel
 
 @{
 	ViewData["Title"] = "AddProduct";
@@ -6,24 +6,31 @@
 
 <h3>ADD A NEW PRODUCT</h3>
 
-<div class="form-control">
+<form method="post" asp-controller="Admin" asp-action="CreateProduct" class="form-control">
 	<p class="form-label">Proudct Name</p>
-	<input type="text" />
+	<input type="text" asp-for="Name" class="form-control" />
 	<p class="form-label">Short Description</p>
-	<input type="text" />
+	<input type="text" asp-for="Description" class="form-control
 	<p class="form-label">Description</p>
-	<textarea />
+	<textarea asp-for="DescriptionExtra" class="form-control"></textarea>
 	<p class="form-label">Price</p>
-	<input type="number" />
+	<input type="number" asp-for="Price" class="form-control" />
 	<p class="form-label">Stock</p>
-	<input type="number" />
+	<input type="number" asp-for="Stock" class="form-control" />
 	<p class="form-label">Image URl</p>
-	<input type="url" />
+	<input type="text" asp-for="ImageURL" class="form-control" />
 	<p class="form-label">Category</p>
-	<select>
-		@foreach(var categories in Model.Categories)
-		{
-			<option>@categories.CategoryName</option>
+
+	<select asp-for="IdCategory" class="form-control">
+		@{
+			var index = 0;
+
+			foreach (var categories in Model.Categories)
+			{
+				index++;
+				<option value="@index">@categories.CategoryName</option>
+			}
 		}
 	</select>
-</div>
+	<button type="submit" class="btn btn-primary">ADD</button>
+</form>
