--- a/BUILD-WEEK-4_TEAM-7/Views/Admin/AddProduct.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Admin/AddProduct.cshtml
@@ -7,7 +7,7 @@
 <h3>ADD A NEW PRODUCT</h3>
 
 <form method="post" asp-controller="Admin" asp-action="CreateProduct" class="form-control">
-	<p class="form-label">Proudct Name</p>
+	<p class="form-label">Product Name</p>
 	<input type="text" asp-for="Name" class="form-control" />
 	<p class="form-label">Short Description</p>
 	<input type="text" asp-for="Description" class="form-control
