--- a/BUILD-WEEK-4_TEAM-7/Views/Shared/_Layout.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
             <div class="container-fluid">
-               <img src="img/logo.png" alt="logo" class="logo me-2"/> <a class="navbar-brand text-white" asp-area="" asp-controller="Home" asp-action="Index">Tech Shop - Team 7</a>
+                <img src="~/img/logo.png" alt="logo" class="logo me-2" /> <a class="navbar-brand text-white" asp-area="" asp-controller="Home" asp-action="Index">Tech Shop - Team 7</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
