--- a/BUILD-WEEK-4_TEAM-7/Views/Admin/AddProduct.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Admin/AddProduct.cshtml
@@ -10,7 +10,7 @@
 	<p class="form-label">Product Name</p>
 	<input type="text" asp-for="Name" class="form-control" />
 	<p class="form-label">Short Description</p>
-	<input type="text" asp-for="Description" class="form-control
+	<input type="text" asp-for="Descrition" class="form-control
 	<p class="form-label">Description</p>
 	<textarea asp-for="DescriptionExtra" class="form-control"></textarea>
 	<p class="form-label">Price</p>
