--- a/BUILD-WEEK-4_TEAM-7/Views/Admin/Admin.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Admin/Admin.cshtml
@@ -2,47 +2,51 @@
 @{
     ViewData["Title"] = "Admin";
 }
-<div class="text-center"><h3 class="text-white fw-bold">ADMINISTRATOR PAGE</h3></div>
+<div class="container text-center">
+    <h3 class="text-white fw-bold">ADMINISTRATOR PAGE</h3>
+</div>
 
-<div class="d-flex gap-5 justify-content-center">
-<a class="btn btn-primary mb-3" asp-controller="Admin" asp-action="AddProduct">Aggiungi prodotto</a>
-<a class="btn btn-primary mb-3" asp-controller="Admin" asp-action="AddCategory">Aggiungi categoria</a>
+<div class="container d-flex flex-wrap gap-3 justify-content-center">
+    <a class="btn btn-primary mb-3" asp-controller="Admin" asp-action="AddProduct">Aggiungi prodotto</a>
+    <a class="btn btn-primary mb-3" asp-controller="Admin" asp-action="AddCategory">Aggiungi categoria</a>
 </div>
 
 @{
     var index = 0;
     foreach (var category in ViewBag.Categories)
     {
-        <div class="row text-center">
-            <h4 class="text-white fw-bold fs-3 mb-3">@category.CategoryName</h4>
+        <div class="container">
+            <div class="text-center">
+                <h4 class="text-white fw-bold fs-3 mb-3">@category.CategoryName</h4>
+            </div>
             @{
                 index++;
                 var productsInCategory = Model.Products.Where(p => p.Category == category.IdCategory).ToList();
                 var productGroups = productsInCategory.Select((product, index) => new { product, index })
-                    .GroupBy(x => x.index / 4)
-                    .Select(g => g.Select(x => x.product).ToList())
-                    .ToList();
+                .GroupBy(x => x.index / 4)
+                .Select(g => g.Select(x => x.product).ToList())
+                .ToList();
             }
-
 
             @foreach (var productGroup in productGroups)
             {
-                <div class="row">
+                <div class="row g-3">
                     @foreach (var product in productGroup)
                     {
-                        <div class="col-md-3 mb-3">
-                            <div class="card">
+                        <div class="col-lg-3 col-md-4 col-sm-6">
+                            <div class="card h-100">
                                 <img src="@product.ImageURL" class="card-img-top">
-                                <div class="card-body">
+                                <div class="card-body d-flex flex-column">
                                     <h5 class="card-title">@product.ProductName</h5>
                                     <p class="card-text">@product.Price.ToString("C")</p>
                                     <p class="card-text">@product.Description</p>
-                                    <p class="card-text">@product.Stock</p>
-                                    <p class="card-text">@product.Category</p>
-                                  
-                                    <a asp-controller="Admin" asp-action="EditProduct" asp-route-id="@product.IdProduct" class="btn btn-warning">EDIT</a>
-                                    <a class="btn btn-danger" asp-controller="Admin" asp-action="DeleteProduct" asp-route-id="@product.IdProduct">DELETE</a>
+                                    <p class="card-text">Stock: @product.Stock</p>
+                                    <p class="card-text">Categoria: @product.Category</p>
 
+                                    <div class="mt-auto">
+                                        <a asp-controller="Admin" asp-action="EditProduct" asp-route-id="@product.IdProduct" class="btn btn-warning w-100 mb-2">EDIT</a>
+                                        <a class="btn btn-danger w-100" asp-controller="Admin" asp-action="DeleteProduct" asp-route-id="@product.IdProduct">DELETE</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -52,3 +56,4 @@
         </div>
     }
 }
+
