--- a/BUILD-WEEK-4_TEAM-7/Views/Shared/_Layout.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Shared/_Layout.cshtml
@@ -14,15 +14,17 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light box-shadow mb-3 nav-color">
             <div class="container-fluid">
-                <img src="~/img/logo.png" alt="logo" class="logo me-2" /> <a class="navbar-brand text-white" asp-area="" asp-controller="Home" asp-action="Index">Tech Shop - Team 7</a>
+                <div><img src="~/img/logo.png" alt="logo" class="logo mx-2" /></div>
+                <div><div class="round position-absolute"></div><a class="navbar-brand text-white fw-bolder fs-1 position-relative" asp-area="" asp-controller="Home" asp-action="Index">Epi-Tech</a>
+                    </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between flex-grow-0 me-2">
+                    <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
