--- a/BUILD-WEEK-4_TEAM-7/wwwroot/css/site.css
+++ b/BUILD-WEEK-4_TEAM-7/wwwroot/css/site.css
@@ -6,7 +6,7 @@ html, body {
     margin: 0;
     padding: 0;
     background: rgb(68,68,71);
-    background: linear-gradient(90deg, rgba(68,68,71,1) 0%, rgba(0,0,185,1) 50%, rgba(0,212,255,1) 100%);
+    background: linear-gradient(90deg, rgba(102, 101, 221,1) 3%, rgba(0,0,185,1) 58%, rgba(155, 158, 206,1) 97%);
 }
 
 html {
@@ -40,7 +40,8 @@ body {
 }
 
 .logo {
-    width: 40px;
+    width: 60px;
+    border-radius: 10px;
 }
 
 footer a {
@@ -71,4 +72,38 @@ footer a {
 
 .carousel-control-next-icon {
     background-image: url(../img/NextArrow.svg) !important;
+}
+
+.cardHome {
+    background-color: #ffffff;
+    height: 24rem;
+    border-radius: 9px;
+}
+
+.btn-home {
+    background-color: #8aea92 !important;
+}
+
+.btn-home2 {
+    background-color: #f5b700 !important;
+}
+
+.product-name{
+    font-weight:600;
+}
+
+.nav-color {
+    background-color: #2b28b8 !important;
+    position:sticky;
+    top: 0;
+}
+
+.round {
+    background-color: #5b5bd7 !important;
+    border-radius: 50%;
+    width: 150px;
+    height: 60px;
+    transform: rotate(-8deg);
+    right: 49.6%;
+    top: 8px;
 }
