--- a/BUILD-WEEK-4_TEAM-7/Views/Home/Index.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Home/Index.cshtml
@@ -43,7 +43,7 @@
                                                         <h5 class="card-title text-primary fw-bolder text-center">@product.Price.ToString("C")</h5>
                                                         <p class="card-text text-center">@product.Description</p>
                                                         <div class="d-flex flex-column">
-                                                        <a href="DETTAGLI_URL_1" class="btn btn-primary mb-2" style="width: fit-content; align-self: center">Dettagli</a>
+                                                            <a asp-controller="Admin" asp-action="Details" asp-route-id="@product.IdProduct" class="btn btn-primary mb-2" style="width: fit-content; align-self: center">Dettagli</a>
                                                             <a href="AGGIUNGI_CARRELLO_URL_1" class="btn btn-success" style="width: fit-content; align-self: center">Carrello</a>
                                                         </div>
                                                     </div>
