--- a/BUILD-WEEK-4_TEAM-7/Views/Shared/_Layout.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Cart" asp-action="Index"><img src="~/img/CartIcon.svg"/></a>
+                        </li>
                     </ul>
                 </div>
             </div>
