--- a/BUILD-WEEK-4_TEAM-7/Views/Cart/Index.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Cart/Index.cshtml
@@ -38,7 +38,7 @@
 
 		<div>
 
-			<a asp-controller="Cart" asp-action="Buy">Acquista!</a>
+			<a class="btn btn-primary" asp-controller="Cart" asp-action="Buy">Acquista!</a>
 
 		</div>
 	}
