--- a/BUILD-WEEK-4_TEAM-7/Views/Admin/Details.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Admin/Details.cshtml
@@ -18,7 +18,7 @@
         <p><strong>Stock:</strong> @Model.Stock</p>
         <p><strong>Category:</strong> @Model.CategoryName</p>
 
-        <form asp-action="AddToCart" method="post">
+        @* <form asp-action="AddToCart" method="post">
             <input type="hidden" asp-for="IdProduct" value="@Model.IdProduct" />
             <div class="form-group">
                 <label for="Quantity">Quantity</label>
@@ -26,10 +26,12 @@
                 <span asp-validation-for="Quantity" class="text-danger"></span>
             </div>
             <div class="d-flex w-50">
-            <input type="submit" value="Add to Cart" class="btn btn-success mt-2 me-3" />
+            <input type="submit" value="Add to Cart" class="btn btn-success mt-2 me-3" asp-controller="Admin" asp-action="AddToCart" asp-route-cartProductId="@Model.IdProduct"/>
             <a href="@Url.Action("Index", "Home")" class="btn btn-danger mt-2">Back</a>
             </div>
-        </form>
+        </form> *@
+        
+        <a class="btn btn-success mt-2 me-3" asp-controller="Admin" asp-action="AddToCart" asp-route-cartProductId="@Model.IdProduct">Aggiungi al carrello</a>
     </div>
 </div>
 
