--- a/BUILD-WEEK-4_TEAM-7/Views/Shared/_Layout.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between flex-grow-0 me-2">
                     <ul class="navbar-nav">
+						<li class="nav-item">
+									<a class="btn btn-outline-success my-2 my-sm-0" asp-controller="Search" asp-action="Index">Search</a>
+						</li>
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
@@ -32,7 +35,7 @@
                             <a class="nav-link text-white" href="@Url.Action("Admin","Admin")">Admin</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link btn btn-primary text-white" asp-area="" asp-controller="Login" asp-action="LoginView">Accedi</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Cart" asp-action="Index"><img src="~/img/CartIcon.svg"/></a>
