mt ai button dei form

--- a/BUILD-WEEK-4_TEAM-7/Views/Admin/AddCategory.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Admin/AddCategory.cshtml
@@ -10,7 +10,7 @@
 		<input type="text" asp-for="CategoryName" class="form-control" />
 		<span asp-validation-for="CategoryName" class="text-danger"></span>
 	</div>
-	<button type="submit" class="btn btn-primary">Aggiungi categoria</button>
+	<button type="submit" class="btn btn-primary mt-2">Aggiungi categoria</button>
 </form>
 
 @section Scripts {
