--- a/BUILD-WEEK-4_TEAM-7/Views/Search/Index.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Search/Index.cshtml
@@ -24,8 +24,8 @@
 								<h5 class="card-title text-center">@prod.ProductName</h5>
 								<h5 class="card-title text-primary fw-bolder text-center">@prod.Price.ToString("C")</h5>
 								<div class="d-flex flex-column">
-									<a href="DETTAGLI_URL_1" class="btn btn-primary mb-2" style="width: fit-content; align-self: center">Dettagli</a>
-									<a class="btn btn-danger" style="width: fit-content; align-self: center" asp-controller="Cart" asp-action="AddToCart" asp-route-removeProductId="@prod.IdProduct">+ Carrello</a>
+									<a asp-controller="Admin" asp-action="Details" asp-route-id="@prod.IdProduct" class="btn btn-home2 mb-2" style="width: fit-content; align-self: center">Dettagli</a>
+									<a class="btn btn-home" style="width: fit-content; align-self: center" asp-controller="Admin" asp-action="AddToCart" asp-route-cartProductId="@prod.IdProduct">+ Carrello</a>
 								</div>
 							</div>
 						</div>
