--- a/BUILD-WEEK-4_TEAM-7/Views/Admin/Admin.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Admin/Admin.cshtml
@@ -34,10 +34,10 @@
                     @foreach (var product in productGroup)
                     {
                         <div class="col-lg-3 col-md-4 col-sm-6">
-                            <div class="card h-100">
-                                <img src="@product.ImageURL" class="card-img-top">
+                            <div class="card cardAdmin my-2">
+                                <img src="@product.ImageURL" class="card-img-top pt-4">
                                 <div class="card-body d-flex flex-column">
-                                    <h5 class="card-title">@product.ProductName</h5>
+                                    <h5 class="card-title product-name">@product.ProductName</h5>
                                     <p class="card-text">@product.Price.ToString("C")</p>
                                     <p class="card-text">@product.Description</p>
                                     <p class="card-text">Stock: @product.Stock</p>
