--- a/BUILD-WEEK-4_TEAM-7/Views/Shared/_Layout.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Shared/_Layout.cshtml
@@ -15,18 +15,18 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light box-shadow mb-3 nav-color">
-            <div class="container-fluid">
-                <div><img src="~/img/logo.png" alt="logo" class="logo mx-2" /></div>
-                <div><div class="round position-absolute"></div><a class="navbar-brand text-white fw-bolder fs-1 position-relative" asp-area="" asp-controller="Home" asp-action="Index">Epi-Tech</a>
+            <div class="container-fluid row p-0 ps-4">
+                <div class=" col-md-2"><img src="~/img/logo.png" alt="logo" class="logo" /></div>
+                <div class=" col-md-8 text-center"><div class="round position-absolute"></div><a class="navbar-brand text-white fw-bolder fs-1 position-relative" asp-area="" asp-controller="Home" asp-action="Index">Epi-Tech</a>
                     </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between flex-grow-0 me-2">
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between flex-grow-0 col-md-2">
                     <ul class="navbar-nav">
 						<li class="nav-item">
-									<a class="btn btn-outline-success my-2 my-sm-0" asp-controller="Search" asp-action="Index">Search</a>
+                            <a class="nav-link text-white" asp-controller="Search" asp-action="Index"> <img src="~/img/search.svg" /></a>
 						</li>
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
@@ -35,10 +35,10 @@
                             <a class="nav-link text-white" href="@Url.Action("Admin","Admin")">Admin</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn btn-primary text-white" asp-area="" asp-controller="Login" asp-action="LoginView">Accedi</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Cart" asp-action="Index"><img src="~/img/CartIcon.svg"/></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Cart" asp-action="Index"><img src="~/img/CartIcon.svg"/></a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Login" asp-action="LoginView"><img src="~/img/person-circle.svg" /></a>
                         </li>
                     </ul>
                 </div>
