--- a/BUILD-WEEK-4_TEAM-7/wwwroot/css/site.css
+++ b/BUILD-WEEK-4_TEAM-7/wwwroot/css/site.css
@@ -111,3 +111,13 @@ footer a {
 .cardAdmin{
     border-radius: 9px;
 }
+
+
+.jumbotron {
+    font-weight: 900;
+    color: white;
+    border-radius: 0.3rem;
+    font-size: 2.5rem;
+}
+
+ 
