--- a/BUILD-WEEK-4_TEAM-7/Views/Search/Index.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Search/Index.cshtml
@@ -5,10 +5,39 @@
 }
 
 @{
-    <form class="form-inline my-2 my-lg-0 d-flex" method="post" asp-controller="Search" asp-action="ExecuteQuery">
-        <input asp-for="@Model.Query" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button type="submit" class="btn btn-outline-success my-2 my-sm-0">Search</button>
+    <form class="form-inline my-2 my-lg-0 d-flex mb-3" method="post" asp-controller="Search" asp-action="ExecuteQuery">
+		<select required asp-for="Filter">
+			<option value="Price ASC">
+				Prezzo (asc)
+			</option>
+			<option value="Price DESC">
+				Prezzo (desc)
+			</option>
+			<option value="CategoryName ASC">
+			Categoria (asc)
+			</option>
+			<option value="CategoryName DESC">
+				Categoria (desc)
+			</option>
+		</select>
+        <input required asp-for="@Model.Query" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button type="submit" class="btn btn-success my-2 my-sm-0">Search</button>
     </form>
+
+	// @if (Model.SearchedProducts != null && Model.SearchedProducts.Count != 0)
+	// {
+	// 	<form class="form-inline my-2 my-lg-0 d-flex mb-3" method="post" asp-controller="Search" asp-action="ExecuteFilter">
+	// 		<select asp-for="Filter">
+	// 		<option value="Price ASC">
+	// 		Prezzo (asc)
+	// 		</option>
+	// 		<option value="Price DESC">
+	// 		Prezzo (desc)
+	// 		</option>
+	// 		</select>
+	// 		<button type="submit" class="btn btn-success my-2 my-sm-0">Filter</button>
+	// 	</form>
+	// }
 }
 
 @{
@@ -22,6 +51,7 @@
 							<img src="@prod.ImageURL" class="card-img-top" alt="@prod.ProductName">
 							<div class="card-body">
 								<h5 class="card-title text-center">@prod.ProductName</h5>
+								<h5 class="card-title text-center">Cat: @prod.CategoryName</h5>
 								<h5 class="card-title text-primary fw-bolder text-center">@prod.Price.ToString("C")</h5>
 								<div class="d-flex flex-column">
 									<a asp-controller="Admin" asp-action="Details" asp-route-id="@prod.IdProduct" class="btn btn-home2 mb-2" style="width: fit-content; align-self: center">Dettagli</a>
