Sistemato checkout e colore icone

--- a/BUILD-WEEK-4_TEAM-7/Views/Admin/AddCategory.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Admin/AddCategory.cshtml
@@ -30,7 +30,7 @@
 					<tr class=" bg-table-row">
 			<th scope="row" class="text-center"><p>@category.IdCategory</p></th>
 			<td ><p>@category.CategoryName</p></td>
-			<td><a asp-controller="Admin" asp-action="DeleteCategory" asp-route-DeleteCategoryId="@category.IdCategory" class="text-danger "> <img src="~/img/trash3.svg" /></a></td>
+			<td><a asp-controller="Admin" asp-action="DeleteCategory" asp-route-DeleteCategoryId="@category.IdCategory"> <img src="~/img/trash3.svg" /></a></td>
 		</tr>
 		}
 		}
