--- a/BUILD-WEEK-4_TEAM-7/Views/Cart/Checkout.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Cart/Checkout.cshtml
@@ -29,15 +29,15 @@
 		</div>
 	}
 
-
-	<div>
-		<h3 class="text-white fw-bold">Checkout: @ViewBag.Total.ToString("C") </h3>
-	</div>
-
-	<div>
-	<a class="btn btn-home" id="btnPaga">Paga!</a>
-	</div>
 }
+
+ <div>
+	 <h3 class="text-white fw-bold">Checkout: @Model.TotalPrice.ToString("C") </h3>
+</div>
+
+<div>
+	<a class="btn btn-home" id="btnPaga">Paga!</a>
+</div>
 
 <script>
 	const btnPaga = document.getElementById('btnPaga');
