--- a/BUILD-WEEK-4_TEAM-7/Views/Search/Index.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Search/Index.cshtml
@@ -6,7 +6,7 @@
 
 @{
     <form class="form-inline my-2 my-lg-0 d-flex mb-3" method="post" asp-controller="Search" asp-action="ExecuteQuery">
-		<select required asp-for="Filter">
+		<select required class="me-2 rounded-3" asp-for="Filter">
 			<option value="Price ASC">
 				Prezzo (asc)
 			</option>
@@ -21,7 +21,7 @@
 			</option>
 		</select>
         <input required asp-for="@Model.Query" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button type="submit" class="btn btn-success my-2 my-sm-0">Search</button>
+        <button type="submit" class="btn btn-success my-2 my-sm-0 mx-2">Search</button>
     </form>
 
 	// @if (Model.SearchedProducts != null && Model.SearchedProducts.Count != 0)
@@ -46,7 +46,7 @@
         <div class="container">
         <div class="row">
         @foreach(var prod in Model.SearchedProducts) {
-					<div class="col-12 col-md-6 col-lg-3">
+					<div class="col-12 col-md-6 col-lg-3 mt-3">
 						<div class="card" style="height: 24rem;">
 							<img src="@prod.ImageURL" class="card-img-top" alt="@prod.ProductName">
 							<div class="card-body">
