--- a/BUILD-WEEK-4_TEAM-7/wwwroot/css/site.css
+++ b/BUILD-WEEK-4_TEAM-7/wwwroot/css/site.css
@@ -126,3 +126,34 @@ footer a {
 .bg-table-row{
     background-color: white;
 }
+
+/* LOGIN PAGE */
+
+.card {
+    border: none;
+    border-radius: 0.5rem;
+    overflow: hidden;
+}
+
+.form-control {
+    border-radius: 0.25rem;
+}
+
+.btn-primary {
+    background-color: #007bff;
+    border-color: #007bff;
+}
+
+    .btn-primary:hover {
+        background-color: #0056b3;
+        border-color: #0056b3;
+    }
+
+.vertical-separator {
+    width: 2px;
+    height: 100%;
+    background-color: blue;
+    box-shadow: 1px 0 5px rgba(0, 0, 0, 0.1);
+ 
+}
+
